2006-10-18  Tom Tromey  <tromey@redhat.com>

	PR classpath/28203:
	* java/lang/Class.java (getAnnotations): Rewrote.
	* java/lang/reflect/Method.java (METHOD_MODIFIERS): Now
	package-private.
	* java/lang/reflect/Field.java (FIELD_MODIFIERS): Now
	package-private.
	* gcj/field.h (_Jv_FIELD_CONSTANT_VALUE): Removed.
	* defineclass.cc (handleConstantValueAttribute): Added found_value
	argument.  Don't use _Jv_FIELD_CONSTANT_VALUE.
	(read_one_field_attribute): Updated.
	(read_fields): Likewise.
	(handleField): Mask with FIELD_MODIFIERS, not ALL_FLAGS.
	(handleMethod): Mask with METHOD_MODIFIERS, not ALL_FLAGS.

2006-10-17  Tom Tromey  <tromey@redhat.com>

	* defineclass.cc (handleMemberAnnotations): Write member index
	after 'kind'.
	(handleAnnotation): Call prepare_pool_entry.
	* java/lang/reflect/natMethod.cc (getDeclaredAnnotationsInternal):
	Removed unused variable.
	(getParameterAnnotationsInternal): Likewise.
	* java/lang/reflect/natField.cc (getDeclaredAnnotationsInternal):
	Removed unused variable.
	* java/lang/reflect/natConstructor.cc
	(getDeclaredAnnotationsInternal): Removed unused variable.
	(getParameterAnnotationsInternal): Likewise.
	* java/lang/natClass.cc (parseAnnotation): Create annotation.
	(parseAnnotationElement): Handle 'c' and 'e' cases more
	correctly.
	(getMethodDefaultValue): Fixed variable names.
	(parseAnnotationElement): Create String for 's' entry.
	* java/lang/reflect/Constructor.java (getAnnotation): New method.
	* java/lang/reflect/Field.java (getAnnotation): New method.
	* java/lang/reflect/Method.java (getAnnotation): New method.

2006-10-17  Tom Tromey  <tromey@redhat.com>

	* java/lang/natClass.cc (parseAnnotationElement): Expect a utf8
	constant in the "string" case.
	* defineclass.cc (handleAnnotationElement): Expect a utf8 constant
	in the "string" case.

2006-10-17  Tom Tromey  <tromey@redhat.com>

	* configure, Makefile.in: Rebuilt.
	* Makefile.am (install-exec-hook): Now unconditional.  Rename ecjx
	if needed.